kubernetes/angular-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: angular
  name: angular
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: angular
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/my-thai-star: "true"
        io.kompose.service: angular
    spec:
      containers:
        - image:  313903476179.dkr.ecr.eu-central-1.amazonaws.com/my-thai-star/angular:latest
          name: mts-angular
          resources: {}
      restartPolicy: Always
status: {}
