kubernetes/java-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java
  labels:
    io.kompose.service: java
spec:
  selector:
    io.kompose.service: java
  ports:
    - port: 8081
      targetPort: 8081
