kubernetes/my-thai-star-networkpolicy.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: my-thai-star
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/my-thai-star: "true"
  podSelector:
    matchLabels:
      io.kompose.network/my-thai-star: "true"
